# requirement-atomizer-vue3

./: .gitignore  CLAUDE.md  README.md  ai_extract.py  ai_review_actions.py  api_server.py  assemble_spec.py  atomic_requirement_schema.py  atomize.py  cli.py  cosem_access_security.py  cosem_behavior_spec.py  cosem_external_refs.py  cosem_object_model.py  desktop_backend.py  desktop_tasks.py  doc_annotation_export.py  doc_ir.py  doc_ir_export.py  domain_pack.py  engineering_composer.py  export_requirements.py  extract_cosem_instances.py  extract_terms.py  io_utils.py  kb_api.py  kb_query.py  kb_schema.py  kb_server.py  llm_client.py  llm_pipeline.py  llm_review_schema.py  meter_profile.py  obsidian_kb.py  output_writer.py  package-lock.json  pattern_engine.py  pyproject.toml  requirement_schema.py  requirements.txt  (+9 more)
desktop/: start-review-app.ps1
docs/: abnt-obis-bulk-test-method.md  behavior_derivation_guide.md  blue-book-kb-coverage-report.json  blue-book-kb-coverage.md  blue-book-kb-next-steps.md  cli-contract.md  requirement-atomizer-platform-overview-design.md  文档量子化技术方案-专家评审版.docx  文档量子化技术方案-专家评审版.md
domain_packs/dlms_cosem/: kb_sources.yaml  pack.yaml  requirement_patterns.yaml  table_patterns.yaml
golden_sets/abnt_nbr_16968_v5/: golden_summary.json
gui/: __init__.py  app.py  detail_panel.py  fluent.py  i18n.py  llm_settings.py  main_window.py  pipeline_worker.py  requirements_model.py  review_actions.py  settings_dialog.py  spec_result_dialog.py  spec_view.py  theme.qss.template
knowledge_bases/: compiled_from_obsidian.json  energy_metering.json  energy_metering_cosem_classes.json  energy_metering_protocol_layer.json
llm_agents/: review_pipeline.yaml
obsidian-vault/: Knowledge Map.canvas  README.md
obsidian-vault/.obsidian/: app.json  appearance.json  core-plugins.json  graph.json  workspace.json
obsidian-vault/01_terms/: ABNT NBR 14519.md  ABNT NBR 14522.md  AES-GCM.md  Active Energy.md  Activity Calendar.md  Alarm.md  Association.md  Billing Profile.md  Blue Book Part 1 OBIS.md  Blue Book Part 2 COSEM Interface Classes.md  Bypass.md  COSEM.md  Clock.md  Current.md  DLMS.md  Disconnect Control.md  ECDH.md  ECDSA.md  Error.md  Event.md  Firmware Update.md  HDLC.md  High Level Security.md  IEC 62056.md  LTE CAT-M.md  LoRaWAN.md  Load Profile.md  Logical Device.md  Low Level Security.md  OBIS.md  PLC-PRIME.md  QEE.md  RTM 587 2012.md  Reactive Energy.md  Register.md  SAP.md  SMF.md  Smart Meter.md  Snapshot.md  Voltage.md  (+1 more)
obsidian-vault/02_protocol_layer/: Association LN.md  Billing Profile.md  Blue Book Interface Class Catalogue.md  COSEM Access Rights Model.md  COSEM Logical Device Name.md  COSEM Object Model.md  DLMS COSEM Communication Profiles.md  DLMS COSEM Security Suites.md  DLMS COSEM Smart Meter Profile.md  Device ID 1.md  Disconnect Control Scheduler.md  Event Group and Subgroup Model.md  High Level Security Association.md  Image Transfer.md  Load Profile.md  Local Management and Measurement Client.md  Metering Logical Device.md  (+86 more)
packaging/: build-electron-backend.ps1  build.ps1  desktop_backend.spec  ratomizer.spec
parsers/: __init__.py  base.py  docx_parser.py  pdf_parser.py  xlsx_parser.py
requirement_kb/: __init__.py  blue_book_catalog.py  blue_book_report.py  cli.py  coverage.py  matching.py  obsidian.py  repository.py  schema.py  server.py  vault.py
samples/: behavior_review.abnt.jsonl
schemas/: atomic_requirement.schema.json  kb_schema.json  llm_review_result.schema.json  test_point.schema.json
tests/: docx_fixtures.py  test_ai_extract.py  test_api_server.py  test_assemble_spec.py  test_atomize.py  test_blue_book_coverage_report.py  test_blue_book_kb.py  test_cli_contract.py  test_cli_kb_defaults.py  test_cosem_access_security.py  test_cosem_behavior_spec.py  test_cosem_external_refs.py  test_cosem_object_model.py  test_coverage_report.py  test_desktop_tasks.py  test_doc_annotation_export.py  test_document_profile.py  test_domain_pack.py  test_engineering_composer.py  test_export_requirements.py  test_extract_docx_e2e.py  test_extract_pdf_e2e.py  test_extract_xlsx_e2e.py  test_golden_regression.py  test_gui_assemble_worker.py  test_gui_i18n.py  test_gui_model.py  test_gui_settings.py  test_gui_spec_view.py  test_gui_worker.py  test_kb_matching.py  test_label_mapping.py  test_llm_client.py  test_llm_pipeline_routes.py  test_llm_review_schema.py  test_meter_profile.py  test_pattern_engine.py  test_platform_scaffold.py  test_requirement_kb_package.py  test_requirement_schema.py  (+7 more)
tools/: generate_abnt_obis_notes.py
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
(+651 files in other folders)
