[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "requirement-atomizer"
dynamic = ["version"]
description = "Local pipeline for atomizing technical standards into reviewable atomic requirements."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "python-docx>=1.1.0",
  "PyYAML>=6.0.0",
  "openpyxl>=3.1.0",
  "pdfplumber>=0.11",
]

[project.optional-dependencies]
gui = ["PySide6>=6.6"]
package = ["pyinstaller>=6.0"]

[project.scripts]
ratomizer = "cli:main"
requirement-atomizer = "atomize:main"
requirement-review = "llm_pipeline:main"
requirement-api = "api_server:main"
validate-kb = "kb_schema:main"
validate-vault = "validate_vault:main"
validate-atomic-requirements = "atomic_requirement_schema:main"
validate-llm-reviews = "llm_review_schema:main"

[project.gui-scripts]
ratomizer-gui = "gui.app:main"

[tool.setuptools]
py-modules = [
  "api_server",
  "atomic_requirement_schema",
  "atomize",
  "cli",
  "doc_ir",
  "doc_ir_export",
  "domain_pack",
  "export_requirements",
  "kb_api",
  "kb_matching",
  "kb_query",
  "kb_schema",
  "kb_server",
  "llm_review_schema",
  "llm_client",
  "llm_pipeline",
  "obsidian_kb",
  "output_writer",
  "pattern_engine",
  "review_state",
  "resources",
  "table_pattern_engine",
  "validate_vault",
  "version",
]

[tool.setuptools.dynamic]
version = {attr = "version.__version__"}

[tool.setuptools.package-data]
gui = ["theme.qss.template"]

[tool.setuptools.packages.find]
include = ["gui*", "parsers*"]
