[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "requirement-atomizer"
dynamic = ["version"]
description = "Local pipeline for atomizing technical standards into reviewable atomic requirements."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "python-docx>=1.1.0",
  "PyYAML>=6.0.0",
  "openpyxl>=3.1.0",
  "pdfplumber>=0.11",
]

[project.optional-dependencies]
gui = ["PySide6>=6.6"]
package = ["pyinstaller>=6.0"]

[project.scripts]
ratomizer = "cli:main"
requirement-atomizer = "atomize:main"
requirement-review = "llm_pipeline:main"
requirement-api = "api_server:main"
requirement-kb = "requirement_kb.cli:main"
requirement-kb-server = "requirement_kb.server:main"
validate-kb = "requirement_kb.schema:main"
validate-vault = "requirement_kb.vault:main"
validate-atomic-requirements = "atomic_requirement_schema:main"
validate-llm-reviews = "llm_review_schema:main"

[project.gui-scripts]
ratomizer-gui = "gui.app:main"

[tool.setuptools]
py-modules = [
  "api_server",
  "assemble_spec",
  "atomic_requirement_schema",
  "atomize",
  "cli",
  "cosem_access_security",
  "cosem_behavior_spec",
  "cosem_external_refs",
  "cosem_object_model",
  "doc_ir",
  "doc_ir_export",
  "domain_pack",
  "engineering_composer",
  "export_requirements",
  "extract_cosem_instances",
  "extract_terms",
  "llm_client",
  "llm_pipeline",
  "llm_review_schema",
  "output_writer",
  "pattern_engine",
  "requirement_schema",
  "resources",
  "review_state",
  "spec_enrich",
  "spec_excel",
  "spec_export",
  "table_pattern_engine",
  "text_normalize",
  "version",
]

[tool.setuptools.dynamic]
version = {attr = "version.__version__"}

[tool.setuptools.package-data]
gui = ["theme.qss.template"]

[tool.setuptools.packages.find]
include = ["gui*", "parsers*", "requirement_kb*"]
